# BetterAlexa

./: .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile  README.md  compose.yaml  database_handling.py  docker-compose.yml  dump.rdb  functions.json  key_value_store.db  llama3-fine-tuning-fc.ipynb  llama3.py  main.py  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  requirements.txt  requirementsServer.txt  service.py  spotifyextension.py  test_tutorai.py  textToSpeechToFile.py  ttsService.py  turbo.json  use-llm.py  wikipedia.py  wolfram.py
SS24-audio/: .gitignore
audio_stream_client/: requirements.txt
backend/: README.md
betteralexa_ckv/: main.py  setup.md
cd/: cd.py  hook.py  repo.py  requirements.txt
client/: Client.py  GymKiler_Client.txt  GymKiler_testnewserver.py  RequirementsClient.txt  audio_interface.py  client.py  docu.md  requirementsClient.txt
client_micro/: .gitignore  client.py  requirementsClient.txt
frontend/: ._.gitignore  ._package.json  ._pnpm-lock.yaml  .gitignore  Dockerfile  docker-compose.yml  dump.rdb  pnpm-lock.yaml  pnpm-workspace.yaml
indexing/: .gitignore  fastapi_index.py  loadqdrant.py
server/: Zoom_SETUP.md  (+12 more)
server/zoom_bot/repo_zoom_sdk/zoomBot-main/: .gitmodules  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  README.md  ZoomSDKAudioRawData.cpp  ZoomSDKAudioRawData.h  ZoomSDKVirtualAudioMicEvent.cpp  ZoomSDKVirtualAudioMicEvent.h  audioHandling.cpp  audioHandling.h  config.txt  meeting_sdk.cpp  meeting_sdk.h  meeting_sdk_pybind.cpp  sendFile.py  setup.py  terminalInteractions.cpp  terminalInteractions.h  vcpkg-configuration.json  vcpkg.json
server/zoom_bot/repo_zoom_sdk/zoomBot-main/include/h/: zoom_sdk_platform.h
server/zoom_bot/repo_zoom_sdk/zoomBot-main/include/h/meeting_service_components/: meeting_breakout_rooms_interface_v2.h  meeting_configuration_interface.h  meeting_inmeeting_encryption_interface.h  meeting_sharing_interface.h  meeting_video_interface.h
server/zoom_bot/repo_zoom_sdk/zoomBot-main/include/h/rawdata/: rawdata_audio_helper_interface.h  rawdata_share_source_helper_interface.h
server/zoom_bot/repo_zoom_sdk/zoomBot-main/lib/zoom_meeting_sdk/qt_libs/Qt/lib/: libQt5QmlModels.so.5  libQt5QmlWorkerScript.so.5  libQt5QuickWidgets.so.5  libQt5WaylandClient.so.5
server/zoom_bot/repo_zoom_sdk/zoomBot-main/lib/zoom_meeting_sdk/qt_libs/Qt/qml/Qt/labs/calendar/: MonthGrid.qmlc
server/zoom_bot/repo_zoom_sdk/zoomBot-main/lib/zoom_meeting_sdk/qt_libs/Qt/qml/QtGraphicalEffects/private/: FastGlow.qmlc  FastInnerShadow.qmlc  FastMaskedBlur.qmlc  GaussianDirectionalBlur.qmlc
server/zoom_bot/repo_zoom_sdk/zoomBot-main/lib/zoom_meeting_sdk/qt_libs/Qt/qml/QtQuick/Controls/: Button.qmlc  CheckBox.qmlc  MenuBar.qmlc  Slider.qmlc  StackView.qmlc  StackViewDelegate.qmlc  Switch.qmlc  Tab.qmlc  TableView.qmlc  ToolBar.qmlc
server/zoom_bot/repo_zoom_sdk/zoomBot-main/lib/zoom_meeting_sdk/qt_libs/Qt/qml/QtQuick/Controls/Private/: BasicTableView.qmlc  ColumnMenuContent.qmlc  Control.qmlc  EditMenu.qmlc  EditMenu_base.qmlc  FastGlow.qmlc  FocusFrame.qmlc  MenuContentScroller.qmlc  StackView.jsc  TableViewItemDelegateLoader.qmlc  TextHandle.qmlc  TextSingleton.qmlc
server/zoom_bot/repo_zoom_sdk/zoomBot-main/lib/zoom_meeting_sdk/qt_libs/Qt/qml/QtQuick/Controls/Styles/Base/: ApplicationWindowStyle.qmlc  BasicTableViewStyle.qmlc  CalendarStyle.qmlc  FocusFrameStyle.qmlc  MenuStyle.qmlc  TextAreaStyle.qmlc  TextFieldStyle.qmlc  ToggleButtonStyle.qmlc  TreeViewStyle.qmlc
server/zoom_bot/repo_zoom_sdk/zoomBot-main/lib/zoom_meeting_sdk/qt_libs/Qt/qml/QtQuick/Controls/Styles/Desktop/: CheckBoxStyle.qmlc  GroupBoxStyle.qmlc  RadioButtonStyle.qmlc  ScrollViewStyle.qmlc  SliderStyle.qmlc  SwitchStyle.qmlc
server/zoom_bot/repo_zoom_sdk/zoomBot-main/lib/zoom_meeting_sdk/qt_libs/Qt/qml/QtQuick/Dialogs/qml/: ColorSlider.qmlc  DefaultWindowDecoration.qmlc
server/zoom_bot/repo_zoom_sdk/zoomBot-main/lib/zoom_meeting_sdk/qt_libs/Qt/qml/QtQuick/Extras/: CircularGauge.qmlc  Dial.qmlc  Tumbler.qmlc
server/zoom_bot/repo_zoom_sdk/zoomBot-main/lib/zoom_meeting_sdk/qt_libs/Qt/qml/QtQuick/Extras/Private/: CircularButtonStyleHelper.qmlc  Handle.qmlc  TextSingleton.qmlc
server/zoom_bot/repo_zoom_sdk/zoomBot-main/lib/zoom_meeting_sdk/qt_libs/Qt/qml/QtQuick/Extras/designer/: CircularGaugeSpecifics.qmlc  DialSpecifics.qmlc  PieMenuSpecifics.qmlc  ToggleButtonSpecifics.qmlc
server/zoom_bot/repo_zoom_sdk/zoomBot-main/licenses/: info  opensslLicense
(+310 files in other folders)
